
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct rlimit {int rlim_cur; } ;


 int EXIT_SUCCESS ;
 int RLIMIT_CORE ;
 int RLIMIT_STACK ;
 size_t const SGROWSIZ ;
 int alloc (char const*) ;
 size_t const arc4random () ;
 int clash_smash_no_jump (size_t const) ;
 int die () ;
 int exit (int ) ;
 scalar_t__ getrlimit (int ,struct rlimit*) ;
 int* last_page ;
 int printf (char*,int*,int,size_t const,size_t const) ;
 scalar_t__ setrlimit (int ,struct rlimit const*) ;

int
main(void)
{
    static const struct rlimit core;
    if (setrlimit(RLIMIT_CORE, &core)) die();

    struct rlimit stack;
    if (getrlimit(RLIMIT_STACK, &stack)) die();
    const size_t smash_size = stack.rlim_cur / 3 * 2;
    const size_t final_dist = arc4random() % smash_size;

    alloc((const char *)&stack - final_dist);
    clash_smash_no_jump(smash_size);
    printf("char at %p: %02x; final dist %zu (%zu)\n", last_page, *last_page, final_dist % SGROWSIZ, final_dist);
    exit(EXIT_SUCCESS);
}
